--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,19 @@
   scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: white;
+}
+::-webkit-scrollbar-thumb {
+  background: #16a34a;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #149342;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
